Add prevention of more than 2 decimal places on cards on calculator except reaction time with 3 decimals

--- a/calculator.html
+++ b/calculator.html
@@ -28,7 +28,13 @@
         <img src="assets/images/logo-main.png" width="30" height="30" class="d-inline-block align-top" alt="Physics Code Logo" loading="lazy">
         Physics Code
       </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" 
+      type="button" 
+      data-toggle="collapse" 
+      data-target="#navbarNav" 
+      aria-controls="navbarNav" 
+      aria-expanded="false" 
+      aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -64,7 +70,8 @@
         <div class="container heading-background heading-padding heading-margin-top">
           <h1>Dilemma Zone Calculator <i class="fas fa-calculator"></i></h1>
           <p class="head-text">Add your variables to the calculator - you will need to supply all the variables before being able to
-            calculate whether or not a dilemma zone exists. If you need some hints or want to try to calculate yourself, check our <a href="help.html" target="_blank" class="info-icon"> <i class="fas fa-info-circle"></i></a> info button to the help
+            calculate whether or not a dilemma zone exists. If you need some hints or want to try to calculate yourself, check our 
+            <a href="help.html" target="_blank" class="info-icon"> <i class="fas fa-info-circle"></i></a> info button to the help
             page at any time.</p>
           <p class="head-text">If a dilemma zone exists, the output will show you the distance from the traffic light stop line and
             the size of the dilemma zone.</p>
@@ -85,7 +92,8 @@
           <div class="container heading-background heading-padding heading-margin">
             <h2>Maximum Travelling Distance</h2>
             <p class="card-text">
-              Input the variables for velocity, yellow light phase and interphase. <a href="help.html" target="_blank" class="info-icon"> <i class="fas fa-info-circle"></i></a>
+              Input the variables for velocity, yellow light phase and interphase. 
+              <a href="help.html" target="_blank" class="info-icon"> <i class="fas fa-info-circle"></i></a>
             </p>
           </div>
         </div>
@@ -97,13 +105,27 @@
             <img class="card-img-top img-fluid" src="assets/images/card-images/velocity.png" alt="Input Velocity Image">
             <div class="card-body">
               <h5 class="card-title">Velocity (ms<sup>-1</sup>)
-                <a tabindex="0" class="btn btn-link" role="button" data-toggle="popover" data-trigger="focus" title="Initial Velocity (ms<sup>-1</sup>, kmh<sup>-1</sup> or mph)"
-                  data-content="Enter the initial velocity the vehicle is travelling. Don't forget to check the units!">
+                <a tabindex="0" 
+                class="btn btn-link" 
+                role="button" 
+                data-toggle="popover" 
+                data-trigger="focus" 
+                title="Initial Velocity (ms<sup>-1</sup>, kmh<sup>-1</sup> or mph)"
+                data-content="Enter the initial velocity the vehicle is travelling. Don't forget to check the units!">
                   <i class="far fa-question-circle fa-2x"></i>
                 </a></h5>
               <br>
               <label for="initialVelocity">Velocity</label><br>
-              <input type="number" name="inputVelocity" onkeypress="return isNumberKey(event)" id="initialVelocity" class="reset_form" value="10" step="0.01" required><br>
+              <input 
+              type="number" 
+              name="inputVelocity" 
+              onkeypress="return isNumberKey(event)" 
+              onkeyup="return truncateDecimals(this, 2)" 
+              id="initialVelocity" 
+              class="reset_form" 
+              value="10" 
+              step="0.01" 
+              required><br>
               <label for="units">Units</label><br>
               <select name="units" id="units" style="width:60px;">
                 <option value="kmh">kmh&#x207b;&sup1;</option>
@@ -120,12 +142,29 @@
             <img class="card-img-top img-fluid" src="assets/images/card-images/yellow.png" alt="Input Yellow Light Phase Image">
             <div class="card-body">
               <h5 class="card-title">Yellow Phase (s)
-                <a tabindex="0" class="btn btn-link" role="button" data-toggle="popover" data-trigger="focus" title="Yellow Light Phase (s)" data-content="Enter the total time the traffic light remains yellow. The unit is seconds.">
+                <a tabindex="0" 
+                class="btn btn-link" 
+                role="button" 
+                data-toggle="popover" 
+                data-trigger="focus" 
+                title="Yellow Light Phase (s)" 
+                data-content="Enter the total time the traffic light remains yellow. The unit is seconds.">
                   <i class="far fa-question-circle fa-2x"></i>
                 </a></h5>
               <br>
               <label for="yellowPhase">Time of yellow phase in seconds</label><br>
-              <input type="number" name="inputYellowPhase" onkeypress="return isNumberKey(event)" id="yellowPhase" class="reset_form" value="4" step="0.01" min="1" max="8" required><br>
+              <input 
+              type="number" 
+              name="inputYellowPhase" 
+              onkeypress="return isNumberKey(event)" 
+              onkeyup="return truncateDecimals(this, 2)" 
+              id="yellowPhase" 
+              class="reset_form" 
+              value="4" 
+              step="0.01" 
+              min="1" 
+              max="8" 
+              required><br>
             </div>
           </div>
         </div>
@@ -136,14 +175,31 @@
             <img class="card-img-top img-fluid" src="assets/images/card-images/red.png" alt="Input Interphase Image">
             <div class="card-body">
               <h5 class="card-title">Interphase (s)
-                <a tabindex="0" class="btn btn-link" role="button" data-toggle="popover" data-trigger="focus" title="Interphase (s)" data-content="Enter the total time between end of the right of way phase and the start of the right of way for the next phase.
+                <a tabindex="0" 
+                class="btn btn-link" 
+                role="button" 
+                data-toggle="popover" 
+                data-trigger="focus" 
+                title="Interphase (s)" 
+                data-content="Enter the total time between end of the right of way phase and the start of the right of way for the next phase.
               The unit is seconds.
               Typically this will be 2 to 3 seconds.">
                   <i class="far fa-question-circle fa-2x"></i>
                 </a></h5>
               <br>
               <label for="interPhase">Time of interphase in seconds</label><br>
-              <input type="number" name="inputInterPhase" onkeypress="return isNumberKey(event)" id="interPhase" class="reset_form" value="2" step="0.01" min="1" max="4" required><br>
+              <input 
+              type="number" 
+              name="inputInterPhase" 
+              onkeypress="return isNumberKey(event)" 
+              onkeyup="return truncateDecimals(this, 2)"  
+              id="interPhase" 
+              class="reset_form" 
+              value="2" 
+              step="0.01" 
+              min="1" 
+              max="4" 
+              required><br>
             </div>
           </div>
         </div>
@@ -155,8 +211,10 @@
           <div class="container heading-background heading-padding heading-margin">
             <h2>Reaction Distance, coefficient of friction and intersection distance</h2>
             <p class="card-text">
-              Input the reaction time for the driver (s), the coefficient of friction (0 - 1) and the size of the intersection from stop line to opposite stop line. <a href="help.html" target="_blank" class="info-icon"> <i
-                  class="fas fa-info-circle"></i></a>
+              Input the reaction time for the driver (s), the coefficient of friction (0 - 1) 
+              and the size of the intersection from stop line to opposite stop line. 
+              <a href="help.html" target="_blank" class="info-icon"> 
+              <i class="fas fa-info-circle"></i></a>
             </p>
           </div>
         </div>
@@ -168,14 +226,31 @@
             <img class="card-img-top img-fluid" src="assets/images/card-images/stopwatch.png" alt="Input Reaction Time Image">
             <div class="card-body">
               <h5 class="card-title">Reaction Time (s)
-                <a tabindex="0" class="btn btn-link" role="button" data-toggle="popover" data-trigger="focus" title="Reaction Time (s)" data-content="Enter the time it takes for a driver to react.
+                <a tabindex="0" 
+                class="btn btn-link" 
+                role="button" 
+                data-toggle="popover" 
+                data-trigger="focus" 
+                title="Reaction Time (s)" 
+                data-content="Enter the time it takes for a driver to react.
              Reaction times vary with age, distractions, alcohol or drug usage etc.
              The unit is seconds. Try our Reaction Time game <a href='game.html' target='_blank'>here</a> to give an estimate of reaction times.">
                   <i class="far fa-question-circle fa-2x"></i>
                 </a></h5>
               <br>
               <label for="reactionTime">Reaction time in seconds</label><br>
-              <input type="number" name="inputReactionTime" onkeypress="return isNumberKey(event)" id="reactionTime" class="reset_form" value="1" step="0.001" min="0" max="3" required><br>
+              <input 
+              type="number" 
+              name="inputReactionTime" 
+              onkeypress="return isNumberKey(event)" 
+              onkeyup="return truncateDecimals(this, 3)"  
+              id="reactionTime" 
+              class="reset_form" 
+              value="1" 
+              step="0.001" 
+              min="0" 
+              max="3" 
+              required><br>
             </div>
           </div>
         </div>
@@ -185,14 +260,28 @@
             <img class="card-img-top img-fluid" src="assets/images/card-images/friction.png" alt="Input Coefficient of Friction">
             <div class="card-body">
               <h5 class="card-title">Friction (μ)
-                <a tabindex="0" class="btn btn-link" role="button" data-toggle="popover" data-trigger="focus" title="Coefficient of Friction (μ)"
-                  data-content="Enter the coefficient of friction. This is a number between 0 (the lowest possible) and 1 (total friction) with a maximum of 2 decimal places.">
+                <a tabindex="0" 
+                class="btn btn-link" 
+                role="button" 
+                data-toggle="popover" 
+                data-trigger="focus" 
+                title="Coefficient of Friction (μ)"
+                data-content="Enter the coefficient of friction. This is a number between 0 (the lowest possible) and 1 (total friction) with a maximum of 2 decimal places.">
                   <i class="far fa-question-circle fa-2x"></i>
                 </a></h5>
               <br>
               <label for="friction">Coefficient of friction</label><br>
-              <input type="number" onkeypress="return isNumberKey(event)" id="friction" class="reset_form" value="0.8" step="0.01" min="0" max="1" required><br>
-
+              <input 
+              type="number" 
+              onkeypress="return isNumberKey(event)" 
+              onkeyup="return truncateDecimals(this, 2)"  
+              id="friction" 
+              class="reset_form" 
+              value="0.8" 
+              step="0.01" 
+              min="0" 
+              max="1" 
+              required><br>
             </div>
           </div>
         </div>
@@ -209,7 +298,15 @@
                 </a></h5>
               <br>
               <label for="intersectionDistance">Length of intersection</label><br>
-              <input type="number" onkeypress="return isNumberKey(event)" id="intersectionDistance" class="reset_form" value="40" step="0.01" required><br>
+              <input 
+              type="number" 
+              onkeypress="return isNumberKey(event)" 
+              onkeyup="return truncateDecimals(this, 2)"  
+              id="intersectionDistance" 
+              class="reset_form" 
+              value="40" 
+              step="0.01" 
+              required><br>
               <label for="length-units">Units</label><br>
               <select name="units" id="length-units" style="width:60px;">
                 <option value="yd">yd</option>
@@ -226,7 +323,8 @@
           <div class="container heading-background heading-padding heading-margin">
             <h2>Vehicle Length</h2>
             <p class="card-text">
-              Input the size of the vehicle, default is 4.5 metres. <a href="help.html" target="_blank" class="info-icon"> <i class="fas fa-info-circle"></i></a>
+              Input the size of the vehicle, default is 4.5 metres. 
+              <a href="help.html" target="_blank" class="info-icon"> <i class="fas fa-info-circle"></i></a>
             </p>
           </div>
         </div>
@@ -240,13 +338,26 @@
             <img class="card-img-top img-fluid" src="assets/images/card-images/length.png" alt="Input Vehicle Length">
             <div class="card-body">
               <h5 class="card-title">Vehicle Length (m)
-                <a tabindex="0" class="btn btn-link" role="button" data-toggle="popover" data-trigger="focus" title="Vehicle Length (m)" data-content="Enter the total length of the vehicle in metres. The default is the average of 4.5 metres.">
-                  <i class="far fa-question-circle fa-2x"></i>
+                <a tabindex="0" 
+                class="btn btn-link" 
+                role="button" 
+                data-toggle="popover" 
+                data-trigger="focus" 
+                title="Vehicle Length (m)" 
+                data-content="Enter the total length of the vehicle in metres. The default is the average of 4.5 metres.">
+                <i class="far fa-question-circle fa-2x"></i>
                 </a></h5>
               <br>
               <label for="length">Length of vehicle (m)</label><br>
-              <input type="number" onkeypress="return isNumberKey(event)" id="length" class="reset_form" value="4.5" step="0.01" required><br>
-
+              <input 
+              type="number" 
+              onkeypress="return isNumberKey(event)" 
+              onkeyup="return truncateDecimals(this, 2)"  
+              id="length" 
+              class="reset_form" 
+              value="4.5" 
+              step="0.01" 
+              required><br>
             </div>
           </div>
         </div>
@@ -256,10 +367,16 @@
 
       <div class="row">
         <div class="col-6 text-right title-div">
-          <input type="submit" class="btn btn-success btn-green form--button btn-lg btn--padding btn-rounded" onclick="validateForm();convert();convertDistance();dilemmaZone()" value="&#x2713; Calculate" />
+          <input type="submit" 
+          class="btn btn-success btn-green form--button btn-lg btn--padding btn-rounded" 
+          onclick="validateForm();convert();convertDistance();dilemmaZone()" 
+          value="&#x2713; Calculate" />
         </div>
         <div class="col-6 text-left title-div">
-          <input type="reset" class="btn btn-primary btn-blue form--button btn-lg btn--padding btn-rounded" id="formReset" value="&#x2a2f; Reset" />
+          <input 
+          type="reset" 
+          class="btn btn-danger form--button btn-lg btn--padding btn-rounded" 
+          id="formReset" value="&#x2a2f; Reset" />
         </div>
       </div>
     </form>
@@ -269,8 +386,13 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="zone_header"></h5><span id="dilemmaZoneIcon" class="icon_hide_dilemmazone dz-icon"><i class="fas fa-exclamation-triangle"></i></span>
-            <span id="optionZoneIcon" class="icon_hide_optionzone oz-icon"><i class="far fa-check-square"></i></span>
+            <h5 class="modal-title" 
+            id="zone_header"></h5><span 
+            id="dilemmaZoneIcon" 
+            class="icon_hide_dilemmazone dz-icon">
+            <i class="fas fa-exclamation-triangle"></i></span>
+            <span id="optionZoneIcon" class="icon_hide_optionzone oz-icon">
+            <i class="far fa-check-square"></i></span>
             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
@@ -356,7 +478,8 @@
     <!-- Copyrightand Facebook Share -->
     <div class="container text-center">
       <div class="fb-share-button" data-href="https://pauld0051.github.io/physics-code/index.html" data-layout="button" data-size="large">
-        <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fpauld0051.github.io%2Fphysics-code%2Findex.html&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
+        <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fpauld0051.github.io%2Fphysics-code%2Findex.html&amp;src=sdkpreparse" 
+        class="fb-xfbml-parse-ignore">Share</a></div>
     </div>
 
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
