--- a/help.html
+++ b/help.html
@@ -28,7 +28,14 @@
         <img src="assets/images/logo-main.png" width="30" height="30" class="d-inline-block align-top" alt="Physics Code Logo" loading="lazy">
         Physics Code
       </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button 
+      class="navbar-toggler" 
+      type="button" 
+      data-toggle="collapse" 
+      data-target="#navbarNav" 
+      aria-controls="navbarNav" 
+      aria-expanded="false" 
+      aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -120,7 +127,8 @@
         <div class="card shadow" id="card-help-text-yellow">
           <div class="card-body">
             <p>The yellow light phase (<sub>yp</sub>) is a predetermined length of time controlled at the intersection.</p>
-            <p>A usual time a light remains yellow can range from 3 to 5 seconds. For best results, it is ideal to know the length of time the traffic signal remains yellow.</p>
+            <p>A usual time a light remains yellow can range from 3 to 5 seconds. For best results, 
+            it is ideal to know the length of time the traffic signal remains yellow.</p>
             <p>This value, in seconds, gives the variable <em>time</em> in our velocity equation. This is rearranged to solve for distance.</p>
             <p>The equation to use: \[dist_{yp} = { velocity \cdot time_{yp}}\]</p>
           </div>
@@ -197,7 +205,12 @@
               logical or plausible in a real world context as this would suggest a complete frictionless system. Conversely, the highest possible friction
               would be one. Again, this would not be plausible as movement would then become impossible. You can estimate μ by using real world data.
               Good road conditions and good tires on the vehicle could see a range for μ between 0.67 and 0.75. Icy conditions could see μ as low as 0.3. For
-              more data you can check our accepted values here:<button type="button" class="btn btn-link" data-toggle="modal" data-target="#frictionHelp"><i class="far fa-question-circle"></i></button>
+              more data you can check our accepted values here:
+              <button type="button" 
+              class="btn btn-link" 
+              data-toggle="modal" 
+              data-target="#frictionHelp">
+              <i class="far fa-question-circle"></i></button>
               \[μ\]</p>
           </div>
         </div>
@@ -263,7 +276,8 @@
         <div class="container heading-background heading-padding heading-margin">
           <h2>Putting it all together</h2>
           <p class="card-text">
-            When you have all your variables you can put them into our <a href="index.html" class="underline" target="_blank"> calculator</a> or work it out yourself with this equation.
+            When you have all your variables you can put them into our 
+            <a href="index.html" class="underline" target="_blank"> calculator</a> or work it out yourself with this equation.
           </p>
         </div>
       </div>
@@ -387,7 +401,8 @@
     </tr>
   </tbody>
 </table>
-<small>Some estimation is required for the calculation of μ which may lead to slightly altered results comparing to our calculator. This is because the calculation includes some randomness to account for realistic scenarios.</small>
+<small>Some estimation is required for the calculation of μ which may lead to slightly altered results comparing to our calculator. 
+This is because the calculation includes some randomness to account for realistic scenarios.</small>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="far fa-times-circle"></i> Close</button>
@@ -443,7 +458,8 @@
     <!-- Copyright and Facebook share-->
     <div class="container text-center">
       <div class="fb-share-button" data-href="https://pauld0051.github.io/physics-code/index.html" data-layout="button" data-size="large">
-        <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fpauld0051.github.io%2Fphysics-code%2Findex.html&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
+        <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fpauld0051.github.io%2Fphysics-code%2Findex.html&amp;src=sdkpreparse" 
+        class="fb-xfbml-parse-ignore">Share</a></div>
     </div>
 
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
