--- a/terms.html
+++ b/terms.html
@@ -28,7 +28,14 @@
         <img src="assets/images/logo-main.png" width="30" height="30" class="d-inline-block align-top" alt="Physics Code Logo" loading="lazy">
         Physics Code
       </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button 
+      class="navbar-toggler" 
+      type="button" 
+      data-toggle="collapse" 
+      data-target="#navbarNav" 
+      aria-controls="navbarNav" 
+      aria-expanded="false" 
+      aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -64,12 +71,15 @@
 
     <h2>1. Terms</h2>
 
-    <p>By accessing this Website, accessible from https://pauld0051.github.io/physcis-code/, you are agreeing to be bound by these Website Terms and Conditions of Use and agree that you are responsible for the agreement with any applicable local
-      laws. If you disagree with any of these terms, you are prohibited from accessing this site. The materials contained in this Website are protected by copyright and trade mark law.</p>
+    <p>By accessing this Website, accessible from https://pauld0051.github.io/physcis-code/, 
+    you are agreeing to be bound by these Website Terms and Conditions of Use and agree that you are responsible for the agreement with any applicable local
+      laws. If you disagree with any of these terms, you are prohibited from accessing this site. The materials contained in this Website are protected 
+      by copyright and trade mark law.</p>
 
     <h2>2. Use License</h2>
 
-    <p>Permission is granted to temporarily download one copy of the materials on https://pauld0051.github.io/physcis-code/'s Website for personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of title, and
+    <p>Permission is granted to temporarily download one copy of the materials on https://pauld0051.github.io/physcis-code/'s 
+    Website for personal, non-commercial transitory viewing only. This is the grant of a license, not a transfer of title, and
       under this license you may not:</p>
 
     <ul>
@@ -80,35 +90,45 @@
       <li>transferring the materials to another person or "mirror" the materials on any other server.</li>
     </ul>
 
-    <p>This will let https://pauld0051.github.io/physcis-code/ to terminate upon violations of any of these restrictions. Upon termination, your viewing right will also be terminated and you should destroy any downloaded materials in your possession
-      whether it is printed or electronic format. These Terms of Service has been created with the help of the <a href="https://www.termsofservicegenerator.net">Terms Of Service Generator</a> and the <a
+    <p>This will let https://pauld0051.github.io/physcis-code/ to terminate upon violations of any of these restrictions. 
+    Upon termination, your viewing right will also be terminated and you should destroy any downloaded materials in your possession
+      whether it is printed or electronic format. 
+      These Terms of Service has been created with the help of the <a href="https://www.termsofservicegenerator.net">Terms Of Service Generator</a> and the <a
         href="https://www.generateprivacypolicy.com">Privacy Policy Generator</a>.</p>
 
     <h2>3. Disclaimer</h2>
 
-    <p>All the materials on https://pauld0051.github.io/physcis-code/’s Website are provided "as is". https://pauld0051.github.io/physcis-code/ makes no warranties, may it be expressed or implied, therefore negates all other warranties. Furthermore,
-      https://pauld0051.github.io/physcis-code/ does not make any representations concerning the accuracy or reliability of the use of the materials on its Website or otherwise relating to such materials or any sites linked to this Website.</p>
+    <p>All the materials on https://pauld0051.github.io/physcis-code/’s Website are provided "as is". 
+    https://pauld0051.github.io/physcis-code/ makes no warranties, may it be expressed or implied, therefore negates all other warranties. Furthermore,
+      https://pauld0051.github.io/physcis-code/ does not make any representations concerning the accuracy or reliability of the use of the 
+      materials on its Website or otherwise relating to such materials or any sites linked to this Website.</p>
 
     <h2>4. Limitations</h2>
 
-    <p>https://pauld0051.github.io/physcis-code/ or its suppliers will not be hold accountable for any damages that will arise with the use or inability to use the materials on https://pauld0051.github.io/physcis-code/’s Website, even if
-      https://pauld0051.github.io/physcis-code/ or an authorize representative of this Website has been notified, orally or written, of the possibility of such damage. Some jurisdiction does not allow limitations on implied warranties or limitations
+    <p>https://pauld0051.github.io/physcis-code/ or its suppliers will not be hold accountable for any damages that will arise with the use or 
+    inability to use the materials on https://pauld0051.github.io/physcis-code/’s Website, even if
+      https://pauld0051.github.io/physcis-code/ or an authorize representative of this Website has been notified, orally or written, 
+      of the possibility of such damage. Some jurisdiction does not allow limitations on implied warranties or limitations
       of liability for incidental damages, these limitations may not apply to you.</p>
 
     <h2>5. Revisions and Errata</h2>
 
-    <p>The materials appearing on https://pauld0051.github.io/physcis-code/’s Website may include technical, typographical, or photographic errors. https://pauld0051.github.io/physcis-code/ will not promise that any of the materials in this Website
-      are accurate, complete, or current. https://pauld0051.github.io/physcis-code/ may change the materials contained on its Website at any time without notice. https://pauld0051.github.io/physcis-code/ does not make any commitment to update the
+    <p>The materials appearing on https://pauld0051.github.io/physcis-code/’s Website may include technical, typographical, 
+    or photographic errors. https://pauld0051.github.io/physcis-code/ will not promise that any of the materials in this Website
+      are accurate, complete, or current. https://pauld0051.github.io/physcis-code/ may change the materials contained on its 
+      Website at any time without notice. https://pauld0051.github.io/physcis-code/ does not make any commitment to update the
       materials.</p>
 
     <h2>6. Links</h2>
 
-    <p>https://pauld0051.github.io/physcis-code/ has not reviewed all of the sites linked to its Website and is not responsible for the contents of any such linked site. The presence of any link does not imply endorsement by
+    <p>https://pauld0051.github.io/physcis-code/ has not reviewed all of the sites linked to its Website and is not responsible 
+    for the contents of any such linked site. The presence of any link does not imply endorsement by
       https://pauld0051.github.io/physcis-code/ of the site. The use of any linked website is at the user’s own risk.</p>
 
     <h2>7. Site Terms of Use Modifications</h2>
 
-    <p>https://pauld0051.github.io/physcis-code/ may revise these Terms of Use for its Website at any time without prior notice. By using this Website, you are agreeing to be bound by the current version of these Terms and Conditions of Use.</p>
+    <p>https://pauld0051.github.io/physcis-code/ may revise these Terms of Use for its Website at any time without prior notice. 
+    By using this Website, you are agreeing to be bound by the current version of these Terms and Conditions of Use.</p>
 
     <h2>8. Your Privacy</h2>
 
@@ -116,7 +136,8 @@
 
     <h2>9. Governing Law</h2>
 
-    <p>Any claim related to https://pauld0051.github.io/physcis-code/'s Website shall be governed by the laws of se without regards to its conflict of law provisions.</p>
+    <p>Any claim related to https://pauld0051.github.io/physcis-code/'s 
+    Website shall be governed by the laws of se without regards to its conflict of law provisions.</p>
   </div>
   <!-- Footer -->
   <footer class="page-footer font-small darken-3">
@@ -164,7 +185,8 @@
     <!-- Copyright and Facebook share-->
     <div class="container text-center">
       <div class="fb-share-button" data-href="https://pauld0051.github.io/physics-code/index.html" data-layout="button" data-size="large">
-        <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fpauld0051.github.io%2Fphysics-code%2Findex.html&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
+        <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fpauld0051.github.io%2Fphysics-code%2Findex.html&amp;src=sdkpreparse" 
+        class="fb-xfbml-parse-ignore">Share</a></div>
     </div>
 
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
