--- a/test_yourself.html
+++ b/test_yourself.html
@@ -28,7 +28,14 @@
         <img src="assets/images/logo-main.png" width="30" height="30" class="d-inline-block align-top" alt="Physics Code Logo" loading="lazy">
         Physics Code
       </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button 
+      class="navbar-toggler" 
+      type="button" 
+      data-toggle="collapse" 
+      data-target="#navbarNav" 
+      aria-controls="navbarNav" 
+      aria-expanded="false" 
+      aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -67,7 +74,12 @@
             scenario to calculate if a dilemma or option zone exists. You can refer to our help by clicking on the info button
             <a href="help.html" target="_blank" class="info-icon"> <i class="fas fa-info-circle"></i></a> at any time. Or consider using
             our <a href="calculator.html" target="_blank"><i class="fas fa-calculator"></i> <span class="underline">calculator</span></a> for best results.</p>
-          <p class="head-text">For help on the coefficient of friction click here: <button type="button" class="btn btn-link" data-toggle="modal" data-target="#frictionHelp"><i class="far fa-question-circle"></i></button></p>
+          <p class="head-text">For help on the coefficient of friction click here: 
+          <button type="button" 
+          class="btn btn-link" 
+          data-toggle="modal" 
+          data-target="#frictionHelp">
+          <i class="far fa-question-circle"></i></button></p>
           <p class="head-text">For instructions on how to measure distances across the intersection using Google Maps choose one of the following:</p>
           <div class="d-flex">
             <ul class="list-group list-group-horizontal mx-auto justify-content-center flex-column flex-md-row background-ul">
@@ -182,10 +194,15 @@
               </tr>
             </tbody>
           </table>
-          <small>Some estimation is required for the calculation of μ which may lead to slightly altered results comparing to our calculator. This is because the calculation includes some randomness to account for realistic scenarios.</small>
+          <small>Some estimation is required for the calculation of μ which may lead to slightly altered results comparing to our calculator. 
+          This is because the calculation includes some randomness to account for realistic scenarios.</small>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-danger" data-dismiss="modal"><i class="far fa-times-circle"></i> Close</button>
+          <button 
+          type="button" 
+          class="btn btn-danger" 
+          data-dismiss="modal">
+          <i class="far fa-times-circle"></i> Close</button>
         </div>
       </div>
     </div>
@@ -221,8 +238,18 @@
             <p>Measure the intersection length from the south east and continuing north west on Leningradsky Ave over Tverskaya Zastava Square.</p>
             <div class="container" id="map_one"></div>
             <div class="text-center">
-              <button class="btn btn-primary btn-lgt-blue form--button mt-2 mb-1 btn-rounded" id="randomScenarioMapOne" data-toggle="modal" data-target="#map-1-scene-1"><i class="fas fa-car-battery fa2x"></i> Scene</button>
-              <button class="btn btn-danger btn-lgt-red form--button mt-2 mb-1 btn-rounded" id="current-map-1" data-toggle="modal" data-target="#map-1-scene-1" disabled><i class="fas fa-charging-station fa2x"></i> Current</button>
+              <button 
+              class="btn btn-primary btn-lgt-blue form--button mt-2 mb-1 btn-rounded" 
+              id="randomScenarioMapOne" 
+              data-toggle="modal" 
+              data-target="#map-1-scene-1">
+              <i class="fas fa-car-battery fa2x"></i> Scene</button>
+              <button 
+              class="btn btn-danger btn-lgt-red form--button mt-2 mb-1 btn-rounded" 
+              id="current-map-1" 
+              data-toggle="modal" 
+              data-target="#map-1-scene-1" 
+              disabled><i class="fas fa-charging-station fa2x"></i> Current</button>
             </div>
           </div>
         </div>
@@ -259,8 +286,18 @@
             <p>Measure the intersection length heading from the south west continuing north east on Sunnyholt Road over the M7.</p>
             <div class="container" id="map_two"></div>
             <div class="text-center">
-              <button class="btn btn-primary btn-lgt-blue form--button mt-2 mb-1 btn-rounded" id="randomScenarioMapTwo" data-toggle="modal" data-target="#map-2-scene-1"><i class="fas fa-car-battery fa2x"></i> Scene</button>
-              <button class="btn btn-danger btn-lgt-red form--button mt-2 mb-1 btn-rounded" id="current-map-2" data-toggle="modal" data-target="#map-2-scene-1" disabled><i class="fas fa-charging-station fa2x"></i> Current</button>
+              <button 
+              class="btn btn-primary btn-lgt-blue form--button mt-2 mb-1 btn-rounded" 
+              id="randomScenarioMapTwo" 
+              data-toggle="modal" 
+              data-target="#map-2-scene-1">
+              <i class="fas fa-car-battery fa2x"></i> Scene</button>
+              <button 
+              class="btn btn-danger btn-lgt-red form--button mt-2 mb-1 btn-rounded" 
+              id="current-map-2" 
+              data-toggle="modal" 
+              data-target="#map-2-scene-1" 
+              disabled><i class="fas fa-charging-station fa2x"></i> Current</button>
             </div>
           </div>
         </div>
@@ -297,8 +334,18 @@
             <p>Measure the intersection length heading from the south west continuing north east on Lexington Drive over the Harry Byrd Highway.</p>
             <div class="container" id="map_three"></div>
             <div class="text-center">
-              <button class="btn btn-primary btn-lgt-blue form--button mt-2 mb-1 btn-rounded" id="randomScenarioMapThree" data-toggle="modal" data-target="#map-3-scene-1"><i class="fas fa-car-battery fa2x"></i> Scene</button>
-              <button class="btn btn-danger btn-lgt-red form--button mt-2 mb-1 btn-rounded" id="current-map-3" data-toggle="modal" data-target="#map-3-scene-1" disabled><i class="fas fa-charging-station fa2x"></i> Current</button>
+              <button 
+              class="btn btn-primary btn-lgt-blue form--button mt-2 mb-1 btn-rounded" 
+              id="randomScenarioMapThree" 
+              data-toggle="modal" 
+              data-target="#map-3-scene-1">
+              <i class="fas fa-car-battery fa2x"></i> Scene</button>
+              <button 
+              class="btn btn-danger btn-lgt-red form--button mt-2 mb-1 btn-rounded" 
+              id="current-map-3" 
+              data-toggle="modal" 
+              data-target="#map-3-scene-1" 
+              disabled><i class="fas fa-charging-station fa2x"></i> Current</button>
             </div>
           </div>
         </div>
@@ -335,8 +382,18 @@
             <p>Measure the intersection length heading from the east continuing west on Sigmundstraße over Leyher Street.</p>
             <div class="container" id="map_four"></div>
             <div class="text-center">
-              <button class="btn btn-primary btn-lgt-blue form--button mt-2 mb-1 btn-rounded" id="randomScenarioMapFour" data-toggle="modal" data-target="#map-4-scene-1"><i class="fas fa-car-battery fa2x"></i> Scene</button>
-              <button class="btn btn-danger btn-lgt-red form--button mt-2 mb-1 btn-rounded" id="current-map-4" data-toggle="modal" data-target="#map-4-scene-1" disabled><i class="fas fa-charging-station fa2x"></i> Current</button>
+              <button 
+              class="btn btn-primary btn-lgt-blue form--button mt-2 mb-1 btn-rounded" 
+              id="randomScenarioMapFour" 
+              data-toggle="modal" 
+              data-target="#map-4-scene-1">
+              <i class="fas fa-car-battery fa2x"></i> Scene</button>
+              <button 
+              class="btn btn-danger btn-lgt-red form--button mt-2 mb-1 btn-rounded" 
+              id="current-map-4" 
+              data-toggle="modal" 
+              data-target="#map-4-scene-1" 
+              disabled><i class="fas fa-charging-station fa2x"></i> Current</button>
             </div>
           </div>
         </div>
@@ -373,8 +430,18 @@
             <p>Measure the intersection length heading from the south continuing north on Constitutio Hill.</p>
             <div class="container" id="map_five"></div>
             <div class="text-center">
-              <button class="btn btn-primary btn-lgt-blue form--button mt-2 mb-1 btn-rounded" id="randomScenarioMapFive" data-toggle="modal" data-target="#map-5-scene-1"><i class="fas fa-car-battery fa2x"></i> Scene</button>
-              <button class="btn btn-danger btn-lgt-red form--button mt-2 mb-1 btn-rounded" id="current-map-5" data-toggle="modal" data-target="#map-5-scene-1" disabled><i class="fas fa-charging-station fa2x"></i> Current</button>
+              <button 
+              class="btn btn-primary btn-lgt-blue form--button mt-2 mb-1 btn-rounded" 
+              id="randomScenarioMapFive" 
+              data-toggle="modal" 
+              data-target="#map-5-scene-1">
+              <i class="fas fa-car-battery fa2x"></i> Scene</button>
+              <button 
+              class="btn btn-danger btn-lgt-red form--button mt-2 mb-1 btn-rounded" 
+              id="current-map-5" 
+              data-toggle="modal" 
+              data-target="#map-5-scene-1" 
+              disabled><i class="fas fa-charging-station fa2x"></i> Current</button>
             </div>
           </div>
         </div>
@@ -425,8 +492,16 @@
               <div class="input-group-prepend">
                 <span class="input-group-text">Your calculation</span>
               </div>
-              <input type="number" onkeypress="return isNumberKey(event)" onkeyup="return truncateDecimals(this, 2)" id="userInputMapOne" class="form-control" min="0" max="1000" step="0.01" aria-label="input value for your zone"
-                placeholder="e.g 12.34">
+              <input 
+              type="number" 
+              onkeypress="return isNumberKey(event)" 
+              onkeyup="return truncateDecimals(this, 2)" 
+              id="userInputMapOne" 
+              class="form-control" 
+              min="0" max="1000" 
+              step="0.01" 
+              aria-label="input value for your zone"
+              placeholder="e.g 12.34">
               <div class="input-group-append">
                 <input type="reset" class="btn btn-danger" aria-label="reset your value">
               </div>
@@ -485,8 +560,16 @@
               <div class="input-group-prepend">
                 <span class="input-group-text">Your calculation</span>
               </div>
-              <input type="number" onkeypress="return isNumberKey(event)" onkeyup="return truncateDecimals(this, 2)" id="userInputMapTwo" class="form-control" min="0" max="1000" step="0.01" aria-label="input value for your zone"
-                placeholder="e.g 12.34">
+              <input 
+              type="number" 
+              onkeypress="return isNumberKey(event)" 
+              onkeyup="return truncateDecimals(this, 2)" 
+              id="userInputMapTwo" class="form-control" 
+              min="0" 
+              max="1000" 
+              step="0.01" 
+              aria-label="input value for your zone"
+              placeholder="e.g 12.34">
               <div class="input-group-append">
                 <input type="reset" class="btn btn-danger" aria-label="reset your value">
               </div>
@@ -545,7 +628,15 @@
               <div class="input-group-prepend">
                 <span class="input-group-text">Your calculation</span>
               </div>
-              <input type="number" onkeypress="return isNumberKey(event)" onkeyup="return truncateDecimals(this, 2)" id="userInputMapThree" class="form-control" min="0" max="1000" step="0.01" aria-label="input value for your zone"
+              <input 
+              type="number" 
+              onkeypress="return isNumberKey(event)" 
+              onkeyup="return truncateDecimals(this, 2)" 
+              id="userInputMapThree" class="form-control" 
+              min="0" 
+              max="1000" 
+              step="0.01" 
+              aria-label="input value for your zone"
                 placeholder="e.g 12.34">
               <div class="input-group-append">
                 <input type="reset" class="btn btn-danger" aria-label="reset your value">
@@ -605,8 +696,16 @@
               <div class="input-group-prepend">
                 <span class="input-group-text">Your calculation</span>
               </div>
-              <input type="number" onkeypress="return isNumberKey(event)" onkeyup="return truncateDecimals(this, 2)" id="userInputMapFour" class="form-control" min="0" max="1000" step="0.01" aria-label="input value for your zone"
-                placeholder="e.g 12.34">
+              <input 
+              type="number" 
+              onkeypress="return isNumberKey(event)" 
+              onkeyup="return truncateDecimals(this, 2)" 
+              id="userInputMapFour" class="form-control" 
+              min="0" 
+              max="1000" 
+              step="0.01" 
+              aria-label="input value for your zone"
+              placeholder="e.g 12.34">
               <div class="input-group-append">
                 <input type="reset" class="btn btn-danger" aria-label="reset your value">
               </div>
@@ -665,7 +764,16 @@
               <div class="input-group-prepend">
                 <span class="input-group-text">Your Calculation</span>
               </div>
-              <input type="number" onkeypress="return isNumberKey(event)" onkeyup="return truncateDecimals(this, 2)" id="userInputMapFive" class="form-control" min="0" step="0.01" aria-label="input value for your zone" placeholder="e.g 12.34">
+              <input 
+              type="number" 
+              onkeypress="return isNumberKey(event)" 
+              onkeyup="return truncateDecimals(this, 2)" 
+              id="userInputMapFive" 
+              class="form-control" 
+              min="0" 
+              step="0.01" 
+              aria-label="input value for your zone" 
+              placeholder="e.g 12.34">
               <div class="input-group-append">
                 <input type="reset" class="btn btn-danger" aria-label="reset your value">
               </div>
@@ -730,7 +838,8 @@
     <!-- Copyrightand Facebook Share -->
     <div class="container text-center">
       <div class="fb-share-button" data-href="https://pauld0051.github.io/physics-code/index.html" data-layout="button" data-size="large">
-        <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fpauld0051.github.io%2Fphysics-code%2Findex.html&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore">Share</a></div>
+        <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fpauld0051.github.io%2Fphysics-code%2Findex.html&amp;src=sdkpreparse" 
+        class="fb-xfbml-parse-ignore">Share</a></div>
     </div>
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
       <a href="index.html">Physics Code</a><br>
